--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
-<body ng-app>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+<body ng-app="karaoke">
+  <div ng-controller="HomeController">
+    <input ng-model="test" type="text"/>
+    <p>{{ test }}</p>
+  </div>
 </body>
 </html>
