Fixed everything with loading

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+<script src="http://code.angularjs.org/1.2.15/angular-route.min.js"></script>
+<script src="app.js"></script>
 <body ng-app="karaoke">
   <div ng-controller="HomeController">
     <input ng-model="test" type="text"/>
