--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="karaoke">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Hack Reactor Karaoke</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body ng-cloak>
